prototypes/p4a/tests/invalid_java/16_use_before_open.java
// 16: Java compiles — use before open
class UseBeforeOpen {
    static class Connection {
        boolean open = false;
        void connect() { open = true; }
        void send(String data) { System.out.println("Sending: " + data); }
    }
    public static void main(String[] args) {
        Connection conn = new Connection();
        conn.send("data"); // USE BEFORE OPEN — Java compiles, silent bug
    }
}
